@@ -6,6 +6,7 @@ Version 1.1.8 work in progress
 ------------------------------
 - Bug: Fixed a typo that may cause issue when setting custom script packages with baseUrl option for CClientScript (Qiang)
 - Enh #2262: Added warning log when a session fails to start by CHttpSession (Qiang)
+- Enh #2268: Added CClientScript::getPackageBaseUrl() (Qiang)
 
 Version 1.1.7 March 27, 2011
 ----------------------------
